add login, success views with login controller

--- a/Assignment6/Views/Shared/_Layout.cshtml
+++ b/Assignment6/Views/Shared/_Layout.cshtml
@@ -30,6 +30,15 @@
                         @Html.ActionLink("Logout", "Logout", "Login", new { area = "" }, new { @class = "nav-link" })
                     </li>
                 }
+                else
+                {
+                    <li class="nav-item">
+                    @Html.ActionLink("Register", "Login", "Login", new { area = "" }, new { @class = "nav-link" })
+                    </li>
+                    <li class="nav-item">
+                        @Html.ActionLink("Login", "Index", "Login", new { area = "" }, new { @class = "nav-link" })
+                    </li>
+                }
             </ul>
         </div>
     </nav>
