--- a/Assignment6/Views/Shared/_Layout.cshtml
+++ b/Assignment6/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                 else
                 {
                     <li class="nav-item">
-                    @Html.ActionLink("Register", "Login", "Login", new { area = "" }, new { @class = "nav-link" })
+                        @Html.ActionLink("Register", "Index", "Register", new { area = "" }, new { @class = "nav-link" })
                     </li>
                     <li class="nav-item">
                         @Html.ActionLink("Login", "Index", "Login", new { area = "" }, new { @class = "nav-link" })
@@ -42,7 +42,6 @@
             </ul>
         </div>
     </nav>
-
     <div class="container body-content">
         @RenderBody()
         <hr />
@@ -50,7 +49,6 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
