--- a/Assignment6/Views/Login/Index.cshtml
+++ b/Assignment6/Views/Login/Index.cshtml
@@ -1,47 +1,26 @@
 ﻿@model Assignment6.Models.User
-
 @{
     ViewBag.Title = "Login";
 }
-
-<h2>Index</h2>
-
-
-@using (Html.BeginForm("Login", "Login")) 
-{
-    
-<div class="form-horizontal">
-    <h4>Login</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.PasswordFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Login" class="btn btn-default" />
-        </div>
-    </div>
-</div>
+@section styles{
+    @Styles.Render("~/content/signin.css")
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
+@using (Html.BeginForm("Login", "Login", FormMethod.Post, new { @class = "form-signin" }))
+{
+    <h1 class="h3 mb-3 font-weight-normal">Login</h1>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "sr-only" })
+    @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
+    @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
+
+    @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "sr-only" })
+    @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
+    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
