--- a/Assignment6/Views/Home/Index.cshtml
+++ b/Assignment6/Views/Home/Index.cshtml
@@ -1,61 +1,18 @@
 ﻿@{
-    /**/
-
     ViewBag.Title = "Home Page";
 }
-
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-
+@if (ViewBag.RegistrationInfo != null)
+{
+<div class="alert alert-primary" role="alert">
+    @ViewBag.RegistrationInfo
 </div>
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-    Add Document
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">New Document</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <textarea name="editor1"></textarea>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button id="save-button" type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div id="context" class="col-12">
-
-    </div>
-
-</div>
-
-@section scripts{
-    <script src="https://cdn.ckeditor.com/4.11.2/standard/ckeditor.js"></script>
-    <script>
-        $(document).ready(function () {
-            var editor1 = CKEDITOR.replace('editor1');
-
-            $('#save-button').on('click', function () {
-                $('#context').text(editor1.getData());
-            });
-
-            $('#button2').on('click', function () {
-                console.log($('#context').text());
-                editor1.setData($('#context').text());
-            });
-        });
-    </script>
 }
+<div class="jumbotron">
+    <h1>Welcome</h1>
+    <p>
+        Please <a href="/Register" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="You can register for multiple roles">Register</a>
+        to be able to work on your projects.
+    </p>
+
+</div>
 
