--- a/Assignment6/Views/Shared/_Layout.cshtml
+++ b/Assignment6/Views/Shared/_Layout.cshtml
@@ -25,8 +25,9 @@
     </nav>
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
+        
+        <footer class="fixed-bottom">
+            <hr />
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
