--- a/Assignment6/Views/Register/Index.cshtml
+++ b/Assignment6/Views/Register/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Register";
 }
 
-<h2>Index</h2>
+<h2>Register</h2>
 
 
 @using (Html.BeginForm("Register", "Register")) 
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>UserView</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -47,9 +46,6 @@
 </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
