--- a/Assignment6/Views/Home/UserTasks.cshtml
+++ b/Assignment6/Views/Home/UserTasks.cshtml
@@ -18,25 +18,25 @@
 @Html.Partial("~/Views/Partials/_PartialDocEdit.cshtml")
 
 <div id="tasks-list">
-    @foreach (var item in Model.DocumentAssigns)
+    @foreach (var item in Model.Documents)
     {
         <div class="row">
             <div class="row col-12 my-3 p-3 bg-white rounded shadow-sm">
                 <div class="col-9">
-                    <h4>@Html.DisplayFor(modelItem => item.Document.Title)</h4>
-                    @if (!ViewBag.Pending)
+                    <h4>@Html.DisplayFor(modelItem => item.Title)</h4>
+                    @*@if (!ViewBag.Pending)
                     {
                         <small class="text-muted">Completed by @Html.DisplayFor(modelItem => item.PurchasedByUser.Username)</small>
-                    }
+                    }*@
 
                 </div>
                 @if (ViewBag.Pending)
                 {
                     <div class="col-1">
-                        @Html.ActionLink("Complete", "Complete", new { Id = item.Id, roleId = Model.RoleId, userId = Model.UserId }, htmlAttributes: new { @class = "btn btn-success" })
+                        @Html.ActionLink("Complete", "Complete", new { Id = item.Id, documentAssignId =item.AssignedDocuments.FirstOrDefault()?.Id, roleId = Model.RoleId, userId = Model.UserId }, htmlAttributes: new { @class = "btn btn-success" })
                     </div>
                 }
-                <div class="col-1 " id="@item.Id" UserId="@Model.UserId" body="@item.Document.Body" title="@item.Document.Title">
+                <div class="col-1 " id="@item.Id" UserId="@Model.UserId" body="@item.Body" title="@item.Title">
                     <button class="btn btn-info edit-doc ml-2">View</button>
                 </div>
             </div>
