removing unused views

--- a/Assignment6/Views/Home/Index.cshtml
+++ b/Assignment6/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 <div class="jumbotron">
     <h1>Welcome</h1>
     <p>
-        Please <a href="/Register" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="You can register for multiple roles">Register</a>
+        Please <a href="/Register" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="You can register for multiple roles">Register</a>
         to be able to work on your projects.
     </p>
 
